[project]
name = "lux-design-s3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pettingzoo>=1.24.3",
    "setuptools>=78.1.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
